# python-functions

./: requirements.txt  setup.cfg  setup.py
.deps/: noauto.txt
.github/: debci.txt  dependabot.yml  pythonchecks.txt  renovate.json
.github/workflows/: automerge.yml  python.yml
miraheze/: __init__.py
miraheze/mediawiki/: cycle_puppet.py  disable-puppet.py  disable_puppet.py  enable_puppet.py  iaupload.py  mwdeploy.py  mwimport.py  mwscript.py
miraheze/puppet/: cycle_puppet.py  disable_puppet.py  enable_puppet.py  upgrade-cp-service.py
miraheze/salt/: utils.py
miraheze/salt/mwcli/: partial-reset-wiki.py  partial_reset_wiki.py  rename-wiki.py  rename_wiki.py
miraheze/swift/: fix_container_permissions.py
tests/: test_iaupload.py  test_mwdeploy.py  test_mwimport.py  test_mwscript.py
