[metadata]
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
[options]
python_requires = >=3.11
