[metadata]
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
[options]
python_requires = >=3.11
[options.entry_points]
console_scripts =
    partial-reset-wiki = miraheze.salt.mwcli.partial_reset_wiki:main
    rename-wiki = miraheze.salt.mwcli.rename_wiki:main
    fix-container-perms = miraheze.swift.fix_container_permissions:main
