[metadata]
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
    Topic :: Utilities
[options]
python_requires = >=3.11
[options.entry_points]
console_scripts =
    partial-reset-wiki = miraheze.salt.mwcli.partial_reset_wiki:main
    rename-wiki = miraheze.salt.mwcli.rename_wiki:main
    fix-container-perms = miraheze.swift.fix_container_permissions:main
